# sphinx-c-autodoc

./: .gitignore  .pylintrc  .readthedocs.yml  CHANGELOG.rst  LICENSE-MIT  README.md  README.rst  mypy.ini  pyproject.toml  setup.py  tox.ini
.github/: codecov.yml  dependabot.yaml  renovate.json5
.github/workflows/: ci.yml  pythonpackage.yml  release.yml
docs/: apidoc.rst  conf.py  configuration.rst  contributing.rst  developer_notes.rst  developing.rst  directives.rst  example_c_file.rst  example_output.rst  examples.rst  index.rst  minimum_supported_versions.rst  napoleon.rst  original_c_file.rst  requirements.txt  viewcode.rst
docs/_api/: modules.rst  sphinx_c_autodoc.clang.comments.rst  sphinx_c_autodoc.clang.patches.rst  sphinx_c_autodoc.clang.rst  sphinx_c_autodoc.domains.rst  sphinx_c_autodoc.loader.rst  sphinx_c_autodoc.napoleon.rst  sphinx_c_autodoc.rst  sphinx_c_autodoc.viewcode.rst
docs/_static/css/: custom.css
src/c_docs/: __init__.py  clang_patches.py  loader.py  parser.py
src/c_docs/clang/: comments.py  patches.py
src/sphinx_c_autodoc/: __init__.py  loader.py
src/sphinx_c_autodoc/apidoc/: __init__.py
src/sphinx_c_autodoc/apidoc/templates/: header.rst.jinja2  source.rst.jinja2  toc.rst.jinja2
src/sphinx_c_autodoc/clang/: comments.py  patches.py
src/sphinx_c_autodoc/domains/: c.py
src/sphinx_c_autodoc/napoleon/: __init__.py
src/sphinx_c_autodoc/viewcode/: __init__.py
tests/: .coveragerc  .gitignore  conftest.py
tests/apidoc/: test_apidoc.py
tests/assets/: conf.py  example.rst  file_2.rst  index.rst  viewcode.rst  viewcode_index.rst
tests/assets/c_source/: compilation_database_1.c  compilation_database_2.c  compilation_flags_2.c  example.c  file_2.c  issue_174.c  variables.c
tests/assets/c_source_2/: file_with_private_members.c  header_with_types.h  header_with_undocumented_members.h
tests/assets/c_source_2/nested/: functions.c  macros.c  no_file_comment.c  types.c
tests/assets/include/: some_include.h
tests/clang/: test_compilation_database.py  test_compiler_options.py  test_patch_clang.py
tests/directives/: conftest.py  test_autocdata.py  test_autocenum.py  test_autocfunction.py  test_autocmacro.py  test_autocmodule.py  test_autocstruct.py  test_autoctype.py  test_autocunion.py
tests/directives/assets/: conf.py
tests/directives/assets/c_source/: functions.c  macros.c  no_leading_comment.c  types.c
tests/documenters/: conftest.py  test_ctypedocumenter.py
tests/loader/: test_loader.py
tests/loader/assets/: one_function.c
tests/napoleon/: test_napoleon.py
tests/parser/: test_parser.py
tests/parser/assets/: one_function.c  typedef.c
tests/pre_process/: test_pre_process.py
tests/sphinx_project/: test_directive.py  test_sphinx_build.py
tests/sphinx_project/assets/: conf.py  example.rst  file_2.rst  index.rst
tests/sphinx_project/assets/c_source/: example.c  file_2.c  file_with_only_comment.c  functions.c  types.c
tests/viewcode/: test_viewcode.py
