[project]
name = "sphinx-c-autodoc"
version = "1.4.0"
description = "A sphinx autodoc extension for c modules"
authors = [
    {name="Nick"}
]
readme = "README.rst"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Sphinx :: Extension",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.9"
dependencies = [
    "sphinx>=4.0",
    "clang>=11",
    "beautifulsoup4",
]
[project.urls]
repository = "https://github.com/speedyleion/sphinx-c-autodoc"
documentation = "https://sphinx-c-autodoc.readthedocs.io/en/latest/"

[project.scripts]
sphinx-c-apidoc = 'sphinx_c_autodoc.apidoc:main'

[tool.uv]
dev-dependencies= [
    "black==24.10.0",
    "pycodestyle==2.13.0",
    "mypy==1.13.0",
    "pytest==8.3.5",
    "pytest-cov==6.0.0",
    "sphinxcontrib-autoprogram==0.1.9",
    "types-docutils==0.20.0.20240310",
    "pylint==3.3.2",
    "furo>=2024.0.0",
    "sphinx>=8.2 ; python_full_version >= '3.11'",
]

[build-system]
requires = ["flit_core ==3.10.1"]
build-backend = "flit_core.buildapi"
