[project]
name = "sphinx-c-autodoc"
version = "1.6.0"
description = "A sphinx autodoc extension for c modules"
authors = [
    {name="Nick"}
]
readme = "README.rst"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Sphinx :: Extension",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.10"
dependencies = [
    "sphinx>=4.0",
    "clang>=12",
    "beautifulsoup4",
]
[project.urls]
repository = "https://github.com/speedyleion/sphinx-c-autodoc"
documentation = "https://sphinx-c-autodoc.readthedocs.io/en/latest/"

[project.scripts]
sphinx-c-apidoc = 'sphinx_c_autodoc.apidoc:main'

[tool.uv]
dev-dependencies= [
    "black==25.11.0",
    "pycodestyle==2.14.0",
    "mypy==1.18.2",
    "pytest==8.4.2",
    "pytest-cov==7.0.0",
    "sphinxcontrib-autoprogram==0.1.9",
    "types-docutils==0.20.0.20240310",
    "pylint==3.3.9",
    "furo>=2024.0.0",
    "sphinx>=8.2 ; python_full_version >= '3.11'",
]

[build-system]
requires = ["flit_core ==3.12.0"]
build-backend = "flit_core.buildapi"
